--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <div class="subheading mb-5"> <i class="fas fa-map-marker-alt text-warning"></i> Raleigh-Durham · North Carolina ·
           <a href="mailto:merinogeospatial@gmail.com">merinogeospatial@gmail.com</a>
         </div>
-        <p class="lead mb-1">Geospatial technologist leveraging learning agility and systematic approaches to solve complex problems, implement enterprise technologies, and cultivate high performing teams. </p>
-        <p class="mb-5">An advocate of a kinder world (wide web)!</p>
+        <p class="lead mb-1">Geospatial technologist leveraging learning agility and systematic approaches for solving complex problems, implementing enterprise technologies, and cultivating high performing teams. </p>
+        <p class="mb-5 mt-4 text-center">An advocate of a kinder world (wide web) with  <img class="mx-auto mb-2" height="15%" width="15%" src="img/gfiber.svg" alt=""></p>
         <div class="social-icons">
           <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/merinogeo/">
             <i class="fab fa-linkedin-in"></i>
