--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Web Developer</h3>
             <div class="subheading mb-3">Freelance <i class="fab fa-dev"></i></div>
-            <p>Create, administer, and debug web applications/websites for clients; provide guidance and business recommendations for digital marketing and branding.</p>
+            <p>Create, administer, prototype, and debug web applications/websites for clients; provide guidance and business recommendations for digital marketing and branding.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2018 - Present</span>
