update work section with two project details

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             Oracle and PostgreSQL</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-              Web Development</li>
+            Web Development</li>
           <li>
             <i class="fa-li fa fa-check"></i>
             Cross Functional and Interdisciplinary Teams</li>
@@ -240,7 +240,42 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5 text-primary">Work</h2>
-        <h3>Coming soon...</h3>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="resume-content">
+              <h3 class="mb-0">Google Fiber: Telecom Generator</h3>
+              <div class="subheading mb-3">Python ETL Data Migration</div>
+              <p>In order to address the challenge of enabling telecom connectivity with legacy records with GIS data, various modules that cleaned, transformed, and loaded data was created.
+                Legacy records of connectivity were recorded in various tabular formats, but the required relational data and attribution within our GIS did not exist.
+                With multiple variations across markets and less than desirable data quality, before introducing the complex logic to create connectivity a semiautomated cleanup process
+                was coordinated between our development team and markets.
+              </p>
+              <p>The telecom connectivity model we used was created by a third-party as a part of using their telecom GIS management software. In order for us to retrofit our data to conform with 
+                the software's tools and modules, we had to reverse engineer what happens on the backend when features are created and connected.
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Time Spent on Project: 6 months - Ongoing</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="resume-content">
+                <h3 class="mb-0">City of Raleigh: Experience Based Level of Service</h3>
+                <div class="subheading mb-3">GIS Data Modeling</div>
+                <p>The City of Raleigh extends the traditional parks level of service model by accounting for experiences and level of access.
+                  By quantifying the amentities of each park and combining its spatial properties (such as walkability, population desnsity, etc.), we are able to produce actionable insights
+                  to park development and public land acquisition.
+                </p>
+                <p>Aside from contributing to the model's logic and data creation, I was responsible for improving the quality of code, introducing new variables in to the model, and revamping the
+                  techniques to have better statistical meaning in order to become more actionable for land acquisition decision making.
+                </p>
+              </div>
+              <div class="resume-date text-md-right">
+                <span class="text-primary">Time Spent on Project: 5 months</span>
+              </div>
+            </div>
+
         <p class="mb-0"></p>
       </div>
     </section>
