update work section

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
               </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Time Spent on Project: 6 months - Ongoing</span>
+              <span class="text-primary"></span>
             </div>
           </div>
 
@@ -272,7 +272,7 @@
                 </p>
               </div>
               <div class="resume-date text-md-right">
-                <span class="text-primary">Time Spent on Project: 5 months</span>
+                <span class="text-primary"></span>
               </div>
             </div>
 
