--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Middle Tennessee State University</h3>
-            <div class="subheading mb-3">Master of Science</div>
+            <div class="subheading mb-3">Master of Professitonal Science</div>
             <div>Geoscience - Geographic Information Systems</div>
           </div>
           <div class="resume-date text-md-right">
@@ -270,6 +270,19 @@
                 <p>Aside from contributing to the model's logic and data creation, I was responsible for improving the quality of code, introducing new variables in to the model, and revamping the
                   techniques to have better statistical meaning in order to become more actionable for land acquisition decision making.
                 </p>
+              </div>
+              <div class="resume-date text-md-right">
+                <span class="text-primary"></span>
+              </div>
+            </div>
+
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="resume-content">
+                <h3 class="mb-0">Compete Tool: It's a Secret!</h3>
+                <div class="subheading mb-3">Node JS Webscraper</div>
+                <p>Imagine having to put in information on a website in order to get information... repeatedly... if only there were a way to get the information faster and automatically!
+                </p>
+
               </div>
               <div class="resume-date text-md-right">
                 <span class="text-primary"></span>
