--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Consulting GIS Specialist (Senior Business Analyst)</h3>
+            <h3 class="mb-0">Application Engineer (Sr. Consultant)</h3>
             <div class="subheading mb-3">Google (Artech Information Systems) <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/google.svg" alt="">  </div> 
             <p>Develop complex GIS tools and solutions; enterprise configurations; data wrangling and discrepancy resolution; project planning; spatial analysis; critical ops fire-fighting; general support. </p>
           </div>
@@ -252,6 +252,8 @@
               </p>
               <p>The telecom connectivity model we used was created by a third-party as a part of using their telecom GIS management software. In order for us to retrofit our data to conform with 
                 the software's tools and modules, we had to reverse engineer what happens on the backend when features are created and connected.
+
+                In addition to prototyping - optimized connection in favor of speed over space. This reduced time per connection from (8-60 seconds) to under 0.2 seconds.
               </p>
             </div>
             <div class="resume-date text-md-right">
