--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
               <h3 class="mb-0">Google Fiber: Telecom Generator</h3>
               <div class="subheading mb-3">Python ETL Data Migration</div>
               <p>In order to address the challenge of enabling telecom connectivity with legacy records with GIS data, various modules that cleaned, transformed, and loaded data was created.
-                Legacy records of connectivity were recorded in various tabular formats, but the required relational data and attribution within our GIS did not exist.
+                Legacy records of connectivity were recorded in various flat-file formats, but the required relational data and attribution within our GIS did not exist.
                 With multiple variations across markets and less than desirable data quality, before introducing the complex logic to create connectivity a semiautomated cleanup process
-                was coordinated between our development team and markets.
+                was coordinated between our development team, stakeholders, and vendors.
               </p>
               <p>The telecom connectivity model we used was created by a third-party as a part of using their telecom GIS management software. In order for us to retrofit our data to conform with 
                 the software's tools and modules, we had to reverse engineer what happens on the backend when features are created and connected.
